# Node

./: .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  FSN-INSTALLATION-v2-PLUS-WORKPACKAGES.md  README.md  RELEASES.md  RULES.md  TODO.md  VISION.md  fsn-install.sh  package.toml
.github/workflows/: release.yml
cli/: Cargo.toml  deny.toml
cli/crates/fs-builder/: Cargo.toml
cli/crates/fs-container/: Cargo.toml
cli/crates/fs-deploy/: Cargo.toml
cli/crates/fs-dns/: Cargo.toml
cli/crates/fs-dns/src/: hetzner.rs  lib.rs
cli/crates/fs-host/: Cargo.toml
cli/crates/fs-host/src/: lib.rs  session.rs  systemd.rs
cli/crates/fs-installer/: Cargo.toml
cli/crates/fs-node-cli/: Cargo.toml
cli/crates/fs-node-core/: Cargo.toml
cli/crates/fs-node-server/: Cargo.toml
cli/crates/fs-node-server/src/: error.rs  lib.rs  server.rs
cli/crates/fs-node-server/src/invite/: bundle.rs  mod.rs  ports.rs  token.rs
cli/crates/fs-node-server/src/layer/: auth.rs  federation.rs  mod.rs  proxy.rs  storage.rs
cli/crates/fs-s3/: Cargo.toml
cli/crates/fs-s3/src/: config.rs  (+6 more)
cli/crates/fs-wizard/: Cargo.toml
cli/crates/fsn-builder/: Cargo.toml
cli/crates/fsn-cli/: Cargo.toml
cli/crates/fsn-conductor/: Cargo.toml
cli/crates/fsn-container/: Cargo.toml
cli/crates/fsn-core/: Cargo.toml
cli/crates/fsn-deploy/: Cargo.toml
cli/crates/fsn-dns/: Cargo.toml
cli/crates/fsn-engine/: Cargo.toml
cli/crates/fsn-host/: Cargo.toml
cli/crates/fsn-node-cli/: Cargo.toml
cli/crates/fsn-tui/: Cargo.toml  LAYOUT_PLAN.md
cli/crates/fsn-web/: Cargo.toml
cli/crates/fsn-wizard/: Cargo.toml
cli/fuzz/: Cargo.toml
cli/fuzz/fuzz_targets/: fuzz_config.rs  fuzz_template.rs
docs/: ARCHITECTURE.md
hosts/: example.host.yml
migration/v1_to_v2/: Cargo.toml
modules/ai/mistral-rs/: mistral-rs.toml
modules/ai/ollama/: ollama.toml
modules/auth/kanidm/: kanidm.toml
modules/chat/tuwunel/: tuwunel.toml
modules/collab/cryptpad/: cryptpad.toml
modules/git/forgejo/: forgejo.toml
modules/mail/stalwart/: stalwart.toml
modules/maps/umap/: umap.toml
modules/observability/openobserver/: openobserver.toml
modules/proxy/zentinel/: zentinel.toml
modules/tasks/vikunja/: vikunja.toml
modules/tickets/pretix/: pretix.toml
modules/wiki/outline/: outline.toml
plans/: plan-desktop-cleanup.md  plan-desktop-improvements.md  plan-desktop-v3-complete.md
playbooks/: remove-stack.yml  restart-stack.yml  undeploy-stack.yml  update-stack.yml
playbooks/tasks/: clean-module.yml  deploy-module.yml  remove-module.yml  resolve-service.yml  restart-module.yml  undeploy-module.yml  update-module.yml
playbooks/tasks/tasks/: resolve-service.yml
playbooks/templates/: container.env.j2  container.quadlet.j2
projects/FreeSynergy.Net/: freesynergy.project.yml
projects/FreeSynergy.Net/branding/: theme.css
projects/fsn-net/: freeSynergyNet.host.toml  fsn-net.project.toml
resources/apps/kanidm/: kanidm.toml
resources/apps/mistral-rs/: mistral-rs.toml
resources/apps/stalwart/: stalwart.toml
resources/apps/tuwunel/: tuwunel.toml
resources/apps/zentinel/: zentinel.toml
resources/apps/zentinel-control-plane/: zentinel-control-plane.toml
resources/containers/cryptpad/: cryptpad.toml
resources/containers/dragonfly/: dragonfly.toml
resources/containers/forgejo/: forgejo.toml
store/: index.toml
validator/: Cargo.toml
validator/src/: main.rs  validate_store.rs
(+285 files in other folders)
