[package]
name        = "fs-dns"
description = "FreeSynergy.Node – DNS management (Hetzner, Cloudflare)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
