[package]
name        = "fs-host"
description = "FreeSynergy.Node – host management (SSH, remote install, provisioning)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
serde       = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
russh       = { workspace = true }
russh-keys  = { workspace = true }
